fixed image height on mobile and removed fade for better performance

--- a/public_html/styles.css
+++ b/public_html/styles.css
@@ -96,14 +96,7 @@ footer {
 	border-color: #58a39b;
 }
 
-/*@keyframes fade {*/
-	/*0% {*/
-		/*opacity: 0;}*/
-		/*100% {*/
-			/*opacity: 100%;*/
-		/*}*/
-/*}*/
 .img-fluid{
-	animation: fade 2s linear;
+	max-height: 250px;
 }
 
